force-app/main/default/objects/Product2/fields/ArticleGroupName__c.field-meta.xml
<CustomField>
    <fullName>ArticleGroupName__c</fullName>
    <description>(R1-S1 by JD): Article Group Name.</description>
    <label>zRemove Article Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>