force-app/main/default/objects/Product2/fields/ArticleNumber__c.field-meta.xml
<CustomField>
    <fullName>ArticleNumber__c</fullName>
    <externalId>true</externalId>
    <label>Article Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>