force-app/main/default/objects/Product2/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <formula>IF(PlanningNote__c = &apos;SO&apos; || PlanningNote__c = &apos;SOM&apos;,
   &apos;Slutsåld&apos;,
   if(PlanningNote__c = &apos;TOS&apos;|| PlanningNote__c = &apos;TOSM&apos;,
    AvailabilityStatus__c,If(PlanningNote__c = null,  AvailabilityText__c,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zRemove Availability</label>
    <type>Text</type>
</CustomField>