force-app/main/default/objects/Product2/fields/AvailabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityStatus__c</fullName>
    <description>(R1-S1 by JD): Availability Status.</description>
    <label>zRemove Availability Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>