force-app/main/default/objects/Product2/fields/AvailabilityText__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityText__c</fullName>
    <description>(R1-S1 by JD): Availability Text.</description>
    <label>zRemove Availability Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>