force-app/main/default/objects/Product2/fields/AWS__c.field-meta.xml
<CustomField>
    <fullName>AWS__c</fullName>
    <label>AWS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Algemeen</fullName>
            </value>
            <value>
                <fullName>Wetenschappelijk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>