force-app/main/default/objects/Product2/fields/BlockReason__c.field-meta.xml
<CustomField>
    <fullName>BlockReason__c</fullName>
    <label>Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Price Missing/Incorrect</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>