force-app/main/default/objects/Product2/fields/ChildItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>ChildItemQuantity__c</fullName>
    <label>Child Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>