force-app/main/default/objects/Product2/fields/ChildItems__c.field-meta.xml
<CustomField>
    <fullName>ChildItems__c</fullName>
    <label>Child Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>