force-app/main/default/objects/Product2/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
            <value>
                <fullName>Publishing : Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>