force-app/main/default/objects/Product2/fields/CommercialPlannedPublicationDate__c.field-meta.xml
<CustomField>
    <fullName>CommercialPlannedPublicationDate__c</fullName>
    <label>Commercial Planned Publication Date</label>
    <type>Date</type>
</CustomField>