force-app/main/default/objects/Product2/fields/commercialValue__c.field-meta.xml
<CustomField>
    <fullName>commercialValue__c</fullName>
    <label>Commercial Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>