force-app/main/default/objects/Product2/fields/CoreLicense__c.field-meta.xml
<CustomField>
    <fullName>CoreLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zRemove Core License</label>
    <type>Checkbox</type>
</CustomField>