force-app/main/default/objects/Product2/fields/CustomPricingAllowed__c.field-meta.xml
<CustomField>
    <fullName>CustomPricingAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture the value from the equally named field in NS. This field indicates if the list price can be overwritten in the product selector</description>
    <label>Custom Pricing Allowed</label>
    <type>Checkbox</type>
</CustomField>