force-app/main/default/objects/Product2/fields/DateSuccessorItemActive__c.field-meta.xml
<CustomField>
    <fullName>DateSuccessorItemActive__c</fullName>
    <label>Date Successor Item Active</label>
    <type>Date</type>
</CustomField>