force-app/main/default/objects/Product2/fields/DefaultGroupOrder__c.field-meta.xml
<CustomField>
    <fullName>DefaultGroupOrder__c</fullName>
    <inlineHelpText>This field is used to (pre) define the order this product will be listed on the generated quote. This value will be inherited on the opportunity product (line item) and can be altered on individual opportunities.</inlineHelpText>
    <label>zRemove Default Quotation Group Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>