force-app/main/default/objects/Product2/fields/DefaultQuotationGroup__c.field-meta.xml
<CustomField>
    <fullName>DefaultQuotationGroup__c</fullName>
    <label>zRemoDefault Quotation Group Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>