force-app/main/default/objects/Product2/fields/DeliverComplete__c.field-meta.xml
<CustomField>
    <fullName>DeliverComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver Complete</label>
    <type>Checkbox</type>
</CustomField>