force-app/main/default/objects/Product2/fields/DiscontinuedAsOf__c.field-meta.xml
<CustomField>
    <fullName>DiscontinuedAsOf__c</fullName>
    <label>Discontinued As Of</label>
    <type>Date</type>
</CustomField>