force-app/main/default/objects/Product2/fields/DropShipItem__c.field-meta.xml
<CustomField>
    <fullName>DropShipItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop Ship Item</label>
    <type>Checkbox</type>
</CustomField>