force-app/main/default/objects/Product2/fields/DurationMeasure__c.field-meta.xml
<CustomField>
    <fullName>DurationMeasure__c</fullName>
    <label>Duration Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>