force-app/main/default/objects/Product2/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <description>European Article Numbering</description>
    <externalId>true</externalId>
    <label>EAN</label>
    <length>55</length>
    <type>Text</type>
</CustomField>