force-app/main/default/objects/Product2/fields/EANnumber__c.field-meta.xml
<CustomField>
    <fullName>EANnumber__c</fullName>
    <externalId>true</externalId>
    <label>zRemove EAN number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>