force-app/main/default/objects/Product2/fields/EditionID__c.field-meta.xml
<CustomField>
    <fullName>EditionID__c</fullName>
    <description>(R1-S1 by JD): Edition ID.</description>
    <label>Edition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>