force-app/main/default/objects/Product2/fields/EditionNumber__c.field-meta.xml
<CustomField>
    <fullName>EditionNumber__c</fullName>
    <description>(R1-S1 by JD): Edition Number.</description>
    <label>Edition Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>