force-app/main/default/objects/Product2/fields/EditionType__c.field-meta.xml
<CustomField>
    <fullName>EditionType__c</fullName>
    <description>(R1-S1 by JD): Edition Type. (hardback, softback...)</description>
    <label>Edition Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>