force-app/main/default/objects/Product2/fields/EducationLevel__c.field-meta.xml
<CustomField>
    <fullName>EducationLevel__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary VMBO</fullName>
            </value>
            <value>
                <fullName>Secondary HAVO/VWO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>