force-app/main/default/objects/Product2/fields/Educationtype__c.field-meta.xml
<CustomField>
    <fullName>Educationtype__c</fullName>
    <label>Education type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>