force-app/main/default/objects/Product2/fields/EndDateBlock__c.field-meta.xml
<CustomField>
    <fullName>EndDateBlock__c</fullName>
    <label>End Date Block</label>
    <type>Date</type>
</CustomField>