force-app/main/default/objects/Product2/fields/FamilyType__c.field-meta.xml
<CustomField>
    <fullName>FamilyType__c</fullName>
    <label>Family type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Strippenkaart</fullName>
            </value>
            <value>
                <fullName>ZorgPad Professional</fullName>
            </value>
            <value>
                <fullName>PulseWeb</fullName>
            </value>
            <value>
                <fullName>AskMe</fullName>
            </value>
            <value>
                <fullName>ZorgPad Plug &amp; Play</fullName>
            </value>
            <value>
                <fullName>Edumanager</fullName>
            </value>
            <value>
                <fullName>ZorgPad Bachelor Nursing</fullName>
            </value>
            <value>
                <fullName>LearnLinq</fullName>
            </value>
            <value>
                <fullName>Vilans Assessor</fullName>
            </value>
            <value>
                <fullName>Leerstation Zorg</fullName>
            </value>
            <value>
                <fullName>ZorgPad Zorg &amp; Welzijn</fullName>
            </value>
            <value>
                <fullName>Videobibliotheek</fullName>
            </value>
            <value>
                <fullName>OIVH</fullName>
            </value>
            <value>
                <fullName>Ilias</fullName>
            </value>
            <value>
                <fullName>Informat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>