force-app/main/default/objects/Product2/fields/FirstPublicationDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPublicationDate__c</fullName>
    <label>First Publication Date</label>
    <type>Date</type>
</CustomField>