force-app/main/default/objects/Product2/fields/FixedStartDate__c.field-meta.xml
<CustomField>
    <fullName>FixedStartDate__c</fullName>
    <description>If a product has a seasonal period in which it is valid (e.g. digital subscriptions for schools), this is the date it starts at.</description>
    <label>Fixed Start Date</label>
    <type>Date</type>
</CustomField>