force-app/main/default/objects/Product2/fields/FixedStartDateLicense__c.field-meta.xml
<CustomField>
    <fullName>FixedStartDateLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed start date License?</label>
    <type>Checkbox</type>
</CustomField>