force-app/main/default/objects/Product2/fields/FolioType__c.field-meta.xml
<CustomField>
    <fullName>FolioType__c</fullName>
    <label>Folio Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activating textbook</fullName>
            </value>
            <value>
                <fullName>Textbook</fullName>
            </value>
            <value>
                <fullName>Teacher material</fullName>
            </value>
            <value>
                <fullName>Learning material</fullName>
            </value>
            <value>
                <fullName>Answer Book</fullName>
            </value>
            <value>
                <fullName>Online license Unit</fullName>
            </value>
            <value>
                <fullName>Online Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>