force-app/main/default/objects/Product2/fields/FollowUpCampaign__c.field-meta.xml
<CustomField>
    <fullName>FollowUpCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up Campaign</label>
    <type>Checkbox</type>
</CustomField>