force-app/main/default/objects/Product2/fields/FreeFromDate__c.field-meta.xml
<CustomField>
    <fullName>FreeFromDate__c</fullName>
    <label>Free from Date</label>
    <type>Date</type>
</CustomField>