force-app/main/default/objects/Product2/fields/HasBlock__c.field-meta.xml
<CustomField>
    <fullName>HasBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block</label>
    <type>Checkbox</type>
</CustomField>