force-app/main/default/objects/Product2/fields/HasLimitedDelivery__c.field-meta.xml
<CustomField>
    <fullName>HasLimitedDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited Delivery</label>
    <type>Checkbox</type>
</CustomField>