force-app/main/default/objects/Product2/fields/HasWebcatalogue__c.field-meta.xml
<CustomField>
    <fullName>HasWebcatalogue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webcatalogue</label>
    <type>Checkbox</type>
</CustomField>