force-app/main/default/objects/Product2/fields/HTMLDescription__c.field-meta.xml
<CustomField>
    <fullName>HTMLDescription__c</fullName>
    <label>HTML Description</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>