force-app/main/default/objects/Product2/fields/ImpressionID__c.field-meta.xml
<CustomField>
    <fullName>ImpressionID__c</fullName>
    <description>(R1-S1 by JD): Impression ID.</description>
    <label>Impression ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>