force-app/main/default/objects/Product2/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description>(R1-S1 by JD): ISBN.</description>
    <label>ISBN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>