force-app/main/default/objects/Product2/fields/ISBNArticleNumber__c.field-meta.xml
<CustomField>
    <fullName>ISBNArticleNumber__c</fullName>
    <formula>IF(ISBLANK(ISBN__c),  EAN__c , ISBN__c)</formula>
    <inlineHelpText>ISBN or EAN. The ISBN is leading.</inlineHelpText>
    <label>ISBN / EAN</label>
    <type>Text</type>
</CustomField>