force-app/main/default/objects/Product2/fields/ISBNOrArticleNumber__c.field-meta.xml
<CustomField>
    <fullName>ISBNOrArticleNumber__c</fullName>
    <formula>IF(ISBLANK(ISBN__c) &amp;&amp; NOT(ISBLANK(ArticleNumber__c)), &apos;Article Number&apos;, &apos;ISBN&apos;)</formula>
    <inlineHelpText>If the ISBN is null and the Order Number is filled in, &apos;Article Number&apos; is shown because that means it is the Article Number that appears in the field &apos;ISBN / Article Number&apos;. Else it is &apos;ISBN&apos;.</inlineHelpText>
    <label>ISBN or Article Number?</label>
    <type>Text</type>
</CustomField>