force-app/main/default/objects/Product2/fields/ISBNOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ISBNOrderNumber__c</fullName>
    <description>(R1-S1 by JD): ISBN / Order Number.</description>
    <formula>IF(ISBLANK(ISBN__c), Ordernumber__c, ISBN__c)</formula>
    <inlineHelpText>ISBN or Order Number. The ISBN is leading.</inlineHelpText>
    <label>ISBN / Order Number</label>
    <type>Text</type>
</CustomField>