force-app/main/default/objects/Product2/fields/IsFreeofCharge__c.field-meta.xml
<CustomField>
    <fullName>IsFreeofCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(R1-S1 by JD): Free of Charge.</description>
    <label>Free of Charge</label>
    <type>Checkbox</type>
</CustomField>