force-app/main/default/objects/Product2/fields/IsInspectionCopyOrderPossible__c.field-meta.xml
<CustomField>
    <fullName>IsInspectionCopyOrderPossible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Copy Order Possible</label>
    <type>Checkbox</type>
</CustomField>