force-app/main/default/objects/Product2/fields/IsRegularOrderPossible__c.field-meta.xml
<CustomField>
    <fullName>IsRegularOrderPossible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regular Order Possible</label>
    <type>Checkbox</type>
</CustomField>