force-app/main/default/objects/Product2/fields/IsReturnsAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsReturnsAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returns Allowed</label>
    <type>Checkbox</type>
</CustomField>