force-app/main/default/objects/Product2/fields/IsSuccesorItemActive__c.field-meta.xml
<CustomField>
    <fullName>IsSuccesorItemActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zRemove Succesor Item Active</label>
    <type>Checkbox</type>
</CustomField>