force-app/main/default/objects/Product2/fields/IsSuccessorItemActive__c.field-meta.xml
<CustomField>
    <fullName>IsSuccessorItemActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successor Item Active</label>
    <type>Checkbox</type>
</CustomField>