force-app/main/default/objects/Product2/fields/IsUseCopyOrderPossible__c.field-meta.xml
<CustomField>
    <fullName>IsUseCopyOrderPossible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Copy Order Possible</label>
    <type>Checkbox</type>
</CustomField>