force-app/main/default/objects/Product2/fields/itemGroupCount__c.field-meta.xml
<CustomField>
    <fullName>itemGroupCount__c</fullName>
    <label>Item Group Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>