force-app/main/default/objects/Product2/fields/ItemGroupCountActual__c.field-meta.xml
<CustomField>
    <fullName>ItemGroupCountActual__c</fullName>
    <label>Item Group Count - Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>