force-app/main/default/objects/Product2/fields/itemGroupManualBlock__c.field-meta.xml
<CustomField>
    <fullName>itemGroupManualBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>item Group Manual Block</label>
    <type>Checkbox</type>
</CustomField>