force-app/main/default/objects/Product2/fields/ItemSubtype__c.field-meta.xml
<CustomField>
    <fullName>ItemSubtype__c</fullName>
    <label>Item Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultancy Hours</fullName>
            </value>
            <value>
                <fullName>E-Book</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>