force-app/main/default/objects/Product2/fields/K02__c.field-meta.xml
<CustomField>
    <fullName>K02__c</fullName>
    <label>zRemove K02</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stream</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>