force-app/main/default/objects/Product2/fields/KitChildItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>KitChildItemQuantity__c</fullName>
    <label>zRemove Kit Child Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>