force-app/main/default/objects/Product2/fields/KitChildItems__c.field-meta.xml
<CustomField>
    <fullName>KitChildItems__c</fullName>
    <label>zRemove Kit Child Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>