force-app/main/default/objects/Product2/fields/LicenseBreakDate__c.field-meta.xml
<CustomField>
    <fullName>LicenseBreakDate__c</fullName>
    <label>License Break Date</label>
    <type>Date</type>
</CustomField>