force-app/main/default/objects/Product2/fields/LicenseDurationIndays__c.field-meta.xml
<CustomField>
    <fullName>LicenseDurationIndays__c</fullName>
    <label>License Duration In days</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>