force-app/main/default/objects/Product2/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>Calendar Year</fullName>
            </value>
            <value>
                <fullName>School Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>