force-app/main/default/objects/Product2/fields/ListPriceDiscountType__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscountType__c</fullName>
    <label>List Price Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>