force-app/main/default/objects/Product2/fields/MaxOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxOrderQuantity__c</fullName>
    <label>Max Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>