force-app/main/default/objects/Product2/fields/maxQuantity__c.field-meta.xml
<CustomField>
    <fullName>maxQuantity__c</fullName>
    <label>maxQuantity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>