force-app/main/default/objects/Product2/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <description>(R1-S1 by JD): Medium.</description>
    <label>Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>