force-app/main/default/objects/Product2/fields/MissingComponentPriceCount__c.field-meta.xml
<CustomField>
    <fullName>MissingComponentPriceCount__c</fullName>
    <label>Missing Component Price Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>