force-app/main/default/objects/Product2/fields/MultiUserCode__c.field-meta.xml
<CustomField>
    <fullName>MultiUserCode__c</fullName>
    <label>Multi User Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>