force-app/main/default/objects/Product2/fields/NameBrand__c.field-meta.xml
<CustomField>
    <fullName>NameBrand__c</fullName>
    <label>Name Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>