force-app/main/default/objects/Product2/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <label>Operating Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperatingCompany</valueSetName>
    </valueSet>
</CustomField>