force-app/main/default/objects/Product2/fields/Ordernumber__c.field-meta.xml
<CustomField>
    <fullName>Ordernumber__c</fullName>
    <description>(R1-S1 by JD): Order Number.</description>
    <label>zRemove Artikel Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>