force-app/main/default/objects/Product2/fields/PackageType__c.field-meta.xml
<CustomField>
    <fullName>PackageType__c</fullName>
    <description>This field is used by plantyn. When an opportunity is created .. this field will indicate the package status of the product allowing Account managers to simply identify optional products and potentially remove these from the opportunity and the quote. This field is also used to group the products on the quote itself.</description>
    <label>Package type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basis</fullName>
            </value>
            <value>
                <fullName>Optioneel</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>