force-app/main/default/objects/Product2/fields/PlannedPrintDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedPrintDate__c</fullName>
    <label>Planned Print Date</label>
    <type>Date</type>
</CustomField>