force-app/main/default/objects/Product2/fields/PlannedPublicationDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedPublicationDate__c</fullName>
    <description>(R1-S1 by JD): Planned Publication Date.</description>
    <label>Planned Publication Date</label>
    <type>Date</type>
</CustomField>