force-app/main/default/objects/Product2/fields/PlanningNote__c.field-meta.xml
<CustomField>
    <fullName>PlanningNote__c</fullName>
    <description>(R1-S1 by JD): Planning Note.</description>
    <label>Planning Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>