force-app/main/default/objects/Product2/fields/ProductDiscountGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscountGroup__c</fullName>
    <label>Product Discount Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductDiscountGroup</valueSetName>
    </valueSet>
</CustomField>