force-app/main/default/objects/Product2/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>Product Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>