force-app/main/default/objects/Product2/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <description>Autogenerated Product ID from NetSuite</description>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>