force-app/main/default/objects/Product2/fields/ProductRateGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductRateGroup__c</fullName>
    <label>Product Rate Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informat Packs</fullName>
            </value>
            <value>
                <fullName>Online license</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>