force-app/main/default/objects/Product2/fields/Projectnumber__c.field-meta.xml
<CustomField>
    <fullName>Projectnumber__c</fullName>
    <label>Project Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>